# evince

./: configure.ac
browser-plugin/: EvBrowserPluginToolbar.cpp
data/icons/16x16/actions/: Makefile.am
data/icons/22x22/actions/: Makefile.am
data/icons/24x24/actions/: Makefile.am
help/C/: movingaround.page
libview/: ev-document-model.c  ev-document-model.h  ev-stock-icons.c  ev-stock-icons.h  ev-view.c
previewer/: ev-previewer-window.c  previewer-ui.xml
shell/: ev-application.c  ev-window.c  evince-menus.ui
